[package]
name = "rs2sky"
version = "0.1.0"
authors = ["Rei Shimizu <Shikugawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
bytes        = "1.1.0"
prost        = "0.8.0"
prost-derive = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"

[build-dependencies]
tonic-build = "0.5.2"