[package]
name = "rs2sky"
version = "0.0.1"
authors = ["Rei Shimizu"]
edition = "2018"

[dependencies]
tonic = "0.5.2"
bytes = "1.1.0"
prost = "0.8.0"
prost-derive = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.2"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.5.2"

[[example]]
name = "simple_trace_report"
path = "examples/simple_trace_report.rs"
