[package]
name = "tests"
version = "0.1.0"
authors = ["Shikugawa <Shikugawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skywalking = { path = "../skywalking", package = "skywalking" }
prost = "0.8.0"
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"
